<resources>
    <string name="app_name">Singkat</string>
    <string name="login">Login</string>
    <string name="login_untuk_masuk_ke_aplikasi">Login untuk masuk ke aplikasi</string>
    <string name="nama">Nama</string>
    <string name="id">ID</string>
    <string name="pw">Password</string>
    <string name="search">Search</string>
    <string name="thumbnail_image">thumbnail image</string>
    <string name="selamat_datang">Selamat Datang</string>
    <string name="list_barang">List Barang</string>
    <string name="see_all">See All</string>
    <string name="nama_barang">Nama Barang</string>
    <string name="nup">NUP:</string>
    <string name="_0">0</string>
    <string name="_00">00</string>
    <string name="tanggal_perolehan">Tanggal Perolehan</string>
    <string name="tanggal">0-0-0</string>
    <string name="kondisi_awal">Kondisi Awal</string>
    <string name="baik">Baik</string>
    <string name="keterangan_barang">Keterangan Barang</string>
    <string name="keterangan">Keterangan</string>
    <string name="lokasi_fisik">Lokasi Fisik</string>
    <string name="lokasi">Lokasi</string>
    <string name="scaning_qr_code">Scaning QR Code</string>
    <string name="scane">Scane Qr Code disini jika ingin meminjam inventory</string>
    <string name="scane_button">Scane</string>
    <string name="scaningqr">Scaning QR Code...</string>
    <string name="scane_qr_code_disini_jika_ingin_meminjam_inventory">Scane Qr Code disini jika ingin meminjam inventory</string>
    <string name="layanan_kami">Layanan Kami</string>
    <string name="list">List</string>
    <string name="form_pengajuan_pemijaman_inventory">Form pengajuan pemijaman inventory</string>
    <string name="peminjaman">Peminjaman</string>
    <string name="form_laporan_barang_rusak">Form laporan barang rusak</string>
    <string name="laporan">Laporan</string>
    <string name="back">Back</string>
    <string name="form_peminjaman_barang">Form Peminjaman Barang</string>
    <string name="nama_peminjam">Nama Peminjam</string>
    <string name="nomor_surat_tugas">Nomor Surat Tugas</string>
    <string name="tanggal_surat_tugas">Tanggal Surat Tugas</string>
    <string name="tanggal_peminjaman">Tanggal Peminjaman</string>
    <string name="kegiatan_peminjaman">Kegiatan Peminjaman</string>
    <string name="meminjam">Meminjam</string>
    <string name="laporan_kerusakan_barang">Laporan Kerusakan Barang</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="nama_perangkat">Nama Perangkat</string>
    <string name="tanggal_kerusakan_perangkat">Tanggal Kerusakan Perangkat</string>
    <string name="deskripsi_kerusakan_perangkat">Deskripsi Kerusakan Perangkat</string>
    <string name="done">Done</string>
</resources>