<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".model.DetaiBarang"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/iv_item_photo"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:scaleType="fitXY"
            tools:srcCompat="@tools:sample/avatars"
            android:contentDescription="@string/thumbnail_image"
            android:adjustViewBounds="true"/>


        <TextView
            android:id="@+id/tv_item_barang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/nama_barang"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="left"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/nup"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/tv_kode_nup"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/tv_kode_barang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_00"
                android:textSize="20sp"
                android:gravity="right"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/tanggal_perolehan"
            android:paddingBottom="10dp"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/tv_tanggal_perolehan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/tanggal"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/kondisi_awal"
                android:paddingBottom="10dp"
                android:textSize="25sp"/>

            <TextView
                android:id="@+id/tv_keterangan_kondisi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/baik"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/lokasi_fisik"
                android:paddingBottom="10dp"
                android:textSize="25sp"/>

            <TextView
                android:id="@+id/tv_lokasi_fisik"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/lokasi"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/keterangan"
                android:paddingBottom="10dp"
                android:textSize="25sp"/>

            <TextView
                android:id="@+id/tv_keterangan_barang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/keterangan_barang"/>

        </LinearLayout>





    </LinearLayout>

</ScrollView>