<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginTop="15dp"
    android:layout_marginBottom="4dp"
    android:orientation="horizontal"
    android:padding="15dp"
    app:cardCornerRadius="20dp">


    <RelativeLayout
        android:layout_width="383dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="10dp">

        <ImageView
            android:id="@+id/iv_item_photo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginEnd="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/iv_item_photo"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_item_nama_barang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="12sp"
                android:text="@string/nama_barang"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:text="@string/nup"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="italic" />
                <TextView
                    android:id="@+id/tv_nup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_0"/>

            </LinearLayout>



            <!--            <TextView-->
            <!--                android:id="@+id/tv_item_nup"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:textColor="@color/black"-->
            <!--                android:textSize="16sp"-->
            <!--                android:textStyle="italic"-->
            <!--                android:text="@string/nup"/>-->
        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>